elements/rh-pagination/rh-pagination.css
*,
*:before,
*:after {
  box-sizing: border-box;
}

:host {
  --_stepper-size: var(--rh-length-3xl, 48px);

  display: block;
  min-block-size: 4em;
}

:host([size='sm']) {
  --_stepper-size: var(--rh-length-2xl, 32px);
}

.visually-hidden {
  border: 0;
  clip: rect(0, 0, 0, 0);
  block-size: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  inline-size: 1px;
}

[hidden] {
  display: none !important;
}

#container {
  --_numeric-a-color:
    var(--rh-pagination-accent-color,
      var(--rh-color-interactive-primary-default));
  --_numeric-a-color-hover: var(--rh-color-interactive-primary-hover);
  --_numeric-a-color-focus:
    var(--rh-pagination-accent-color,
      var(--rh-color-interactive-primary-default));
  --_numeric-a-color-focus-outline:
    var(--rh-pagination-accent-color,
      var(--rh-color-interactive-primary-default));
  --_numeric-a-color-visited: var(--rh-color-interactive-primary-visited-default);
  --_numeric-a-color-visited-hover: var(--rh-color-interactive-primary-visited-hover);
  --_list-a-bg-color:
    light-dark(var(--rh-color-surface-lighter, #f2f2f2),
      oklch(from var(--rh-color-surface-dark, #383838) calc(l * 0.82) c h));
  --_list-a-current-page-border-color: var(--rh-color-border-subtle);
  --_list-a-current-page-bg-color:
    light-dark(var(--rh-color-surface-lightest, #ffffff),
      var(--rh-color-surface-darkest, #151515));
  --_list-a-text-color: var(--rh-color-text-primary);
  --_stepper-bg-color:
    light-dark(var(--rh-color-surface-lighter, #f2f2f2),
      oklch(from var(--rh-color-surface-dark, #383838) calc(l * 0.82) c h));
  --_stepper-hover-focus-color: var(--rh-color-text-primary-on-dark, #ffffff);
  --_border-top-hover-color:
    light-dark(var(--rh-color-gray-60, #4d4d4d),
      var(--rh-color-border-subtle-on-light, #c7c7c7));
  --rh-pagination-stepper-color:
    light-dark(var(--rh-color-gray-50, #707070),
      var(--rh-color-text-secondary-on-dark, #c7c7c7));

  /**
   * Remove this re-declaration when the status-disabled variable is defined in tokens
   * and deprecate `--rh-pagination-background-focused`.
   */
  --rh-color-icon-status-disabled:
    light-dark(var(--rh-color-gray-40, #a3a3a3),
      var(--rh-color-gray-60, #4d4d4d));
  /* stylelint-disable-next-line rhds/no-unknown-token-name */
  --rh-pagination-background-focused: var(--rh-color-icon-status-disabled);

  container-name: pagination;
  container-type: inline-size;
  display: flex;
  gap: var(--rh-space-2xl, 32px) calc(var(--rh-space-xs, 4px) / 2);
  flex-wrap: wrap;

  @container pagination (min-width: 768px) {
    flex-wrap: nowrap;
  }
}

nav {
  display: none;

  @container pagination (min-width: 768px) {
    display: contents;
  }
}

svg {
  fill: currentcolor;
}

.stepper {
  background-color: var(--_stepper-bg-color);
  border: var(--rh-border-width-sm, 1px) solid transparent;

  /** Sets the fill color of stepper arrow icons, using the `--rh-color-gray-50` token */
  color: var(--rh-pagination-stepper-color, var(--rh-color-gray-50, #707070));
  display: grid;

  /** Pagination typeface */
  font-family: var(--rh-font-family-heading, RedHatDisplay, 'Red Hat Display', Helvetica, Arial, sans-serif);

  /** Pagination text size */
  font-size: var(--rh-font-size-heading-xs, 1.25rem);
  block-size: var(--_stepper-size);
  place-content: center;
  position: relative;
  text-decoration: none;
  inline-size: var(--_stepper-size);

  &:focus {
    /** Pagination corner rounding */
    border-radius: var(--rh-border-radius-default, 3px);
    outline-offset: -2px;

    /** Pagination focus outline */
    outline: var(--rh-border-width-md, 2px) solid transparent;

    /** Sets the accent color for focus outlines */
    outline-color:
      var(--rh-pagination-accent-color,
        var(--rh-color-interactive-primary-default));
  }

  &:hover:after,
  &:focus:before,
  &:focus:after {
    border-block-start-style: solid;
    content: '';
    inset-inline-start: -1px;
    position: absolute;
    inset-block-start: -1px;
    inline-size: 104%;
  }

  &:hover:after,
  &:focus:before {
    border-block-color: var(--_border-top-hover-color);
    border-block-width: var(--rh-border-width-lg, 3px);
  }

  &:focus:after {
    border-block-color: var(--rh-pagination-accent-color, var(--rh-color-border-interactive));
    border-block-width: var(--rh-border-width-md, 2px);
  }

  & svg {
    block-size: 14px;
  }

  &[inert] {
    pointer-events: none;

    /** Sets the color of disabled stepper icons, using `--rh-color-icon-status-disabled` token */
    color: var(--rh-pagination-background-focused);
    background-color: var(--_stepper-bg-color);
  }
}

:is(#next, #last) svg,
:not(#next, #last) svg:dir(rtl) {
  rotate: 180deg;
}

:is(#next, #last) svg:dir(rtl) {
  rotate: 0deg;
}

#last {
  @container pagination (min-width: 768px) {
    /** Pagination end margin */
    margin-inline-end: var(--rh-space-2xl, 32px);
  }
}

input {
  /** Pagination block size */
  block-size: 100%;

  /** Pagination inline size */
  inline-size: var(--rh-length-4xl, 64px);

  /** Pagination text size */
  font-size: var(--rh-font-size-body-text-md, 1rem);
  background:
    light-dark(var(--rh-color-surface-lightest, #ffffff),
      var(--rh-color-surface-darkest, #151515));
  border: var(--rh-border-width-sm, 1px) solid var(--rh-color-border-subtle);
  border-block-end-color:
    light-dark(var(--rh-color-gray-40, #a3a3a3),
      var(--rh-color-gray-60, #4d4d4d));
  box-sizing: border-box;

  /** Pagination vertical spacing */
  padding-block: var(--rh-space-sm, 6px);

  /** Pagination horizontal spacing */
  padding-inline: var(--rh-space-md, 8px);

  /** Pagination text color */
  color: var(--rh-color-text-primary);

  &:focus {
    border:
      var(--rh-border-width-md, 2px)
      solid
      var(--rh-pagination-accent-color, var(--rh-color-interactive-primary-default));

    /** Pagination vertical spacing */
    padding-block: calc(var(--rh-space-sm, 6px) - 1px);

    /** Pagination horizontal spacing */
    padding-inline: calc(var(--rh-space-md, 8px) - 1px);
    outline: none;
  }

  &:invalid {
    border-block-end-color:
      light-dark(var(--rh-color-red-60, #a60000),
        var(--rh-color-red-40, #f56e6e));

    &:focus {
      border-block-end-width: var(--rh-border-width-md, 2px);
    }
  }
}

#numeric {
  align-items: center;
  display: flex;
  flex: 0;

  /** Pagination text size */
  font-size: var(--rh-font-size-body-text-md, 1rem);
  gap: 0.5em;
  margin-block: 0;

  /** Pagination horizontal margin */
  margin-inline: 0 var(--rh-space-lg, 16px);
  min-block-size: var(--_stepper-size);
  inline-size: 100%;

  & form,
  & label,
  & input {
    place-items: center;
    place-content: center;
    min-block-size: var(--_stepper-size);
  }

  form {
    display: flex;
    flex-direction: row;
    gap: var(--rh-space-md);
  }

  & a {
    text-decoration: underline dashed var(--rh-border-width-sm, 1px);
    text-decoration-color: light-dark(var(--rh-color-gray-50), var(--rh-color-gray-40));
    text-underline-offset: max(5px, 0.28em);
    transition-timing-function: ease;
    transition-property: text-underline-offset, color, text-decoration-color;
    transition-duration: 0.3s;
    color: var(--_numeric-a-color);

    &:hover {
      color: var(--_numeric-a-color-hover);
      text-decoration-color: inherit;
      text-underline-offset: max(6px, 0.33em);
    }

    &:focus {
      /** Pagination corner rounding */
      border-radius: var(--rh-border-radius-default, 3px);
      color: var(--_numeric-a-color-focus);

      /** Pagination focus outline */
      outline: var(--rh-border-width-md, 2px) solid transparent;
      outline-color: var(--_numeric-a-color-focus-outline);
      text-decoration-color: inherit;
      text-underline-offset: max(6px, 0.33em);
    }

    &:visited {
      color: var(--_numeric-a-color-visited);

      &:hover {
        color: var(--_numeric-a-color-visited-hover);
      }
    }
  }
}

.go-to-page-text {
  @container pagination (min-width: 344px) {
    border: 0;
    clip: rect(0, 0, 0, 0);
    block-size: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    white-space: nowrap;
    inline-size: 1px;
  }

  @container pagination (min-width: 768px) {
    clip: auto;
    block-size: auto;
    margin: 0;
    overflow: visible;
    padding: 0;
    position: static;
    white-space: normal;
    inline-size: auto;
  }
}

@container pagination (min-width: 768px) {
  #numeric {
    /** Pagination start margin */
    margin-inline-start: 0;
  }
}

/*****************************************************************************
 * BORDERLESS VARIANT
 *****************************************************************************/

/* NOTE: the `open` variant is deprecated but aliased until the next major release. */

:host(:is([variant|='borderless'], [variant|='open'])) {
  & .stepper {
    --_stepper-bg-color: transparent;

    &:hover:after,
    &:focus:before,
    &:focus:after {
      border-block-start-style: none;
      border-block-end-style: solid;
      inset-block-end: -1px;
    }
  }
}

